--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -21,6 +21,8 @@
                     <span class="helper-text" data-error="Введите пароль"></span>
                 </div>
 
+                <input type="hidden" name="_csrf" value="{{csrf}}">
+
                 <button class="btn btn-primary" type="submit">Войти</button>
             </form>
         </div>
@@ -50,6 +52,8 @@
                     <label for="confirm">Пароль ещё раз</label>
                     <span class="helper-text" data-error="Введите пароль"></span>
                 </div>
+
+                <input type="hidden" name="_csrf" value="{{csrf}}">
 
                 <button class="btn btn-primary" type="submit">Войти</button>
             </form>
