--- a/views/cart.hbs
+++ b/views/cart.hbs
@@ -17,7 +17,7 @@
         <td>{{title}}</td>
         <td>{{count}}</td>
         <td>
-          <button class="btn btm-small js-remove" data-id="{{id}}">Удалить</button>
+          <button class="btn btm-small js-remove" data-id="{{id}}" data-csrf="{{@root.csrf}}">Удалить</button>
         </td>
       </tr>
       {{/each}}
