--- a/views/course-edit.hbs
+++ b/views/course-edit.hbs
@@ -21,10 +21,13 @@
 
     <input type="hidden" name="id" value="{{course.id}}">
 
+    <input type="hidden" name="_csrf" value="{{csrf}}">
+
     <button type="submit" class="btn btn-primary">Сохранить</button>
 </form>
 
 <form action="/courses/remove" method="post">
     <input type="hidden" name="id" value="{{ course.id }}">
-    <button class="btn red">Удалить курса</button>
+    <input type="hidden" name="_csrf" value="{{csrf}}">
+    <button class="btn red">Удалить курс</button>
 </form>
